--- a/src/UI/Headquarters/WB.UI.Headquarters/Dependencies/css/_login.scss
+++ b/src/UI/Headquarters/WB.UI.Headquarters/Dependencies/css/_login.scss
@@ -59,12 +59,30 @@ img#placeholder {
     margin-bottom: 25px;
     @include image-2x("../img/headquarter_logo-retina.png", 100%, 100%);
 }
-@media (max-width: $screen-sm-min){
-    .left-column{
-        #log-in{
-            text-align: center;
-        }
+.interviewer-app{
+    margin: 45px 0 -30px;
+    display: none;
+    border-top: 3px solid $gray-super-light;
+    padding-top: 30px;
+    text-align: center;
+    a{
+        display: block;
+        margin: 0 auto;
+        color: $gray_light;
+        @include font(12px, 16px);
+        text-decoration: underline;
+        &:hover{
+            text-decoration: none;
+        }        
     }
+    .get-interviewer-app{
+        @include size(248px, 79px);
+        background:  url("../img/HQ-login-mobile-get-button-itself.png") no-repeat;
+        background-size: 100%;
+        margin-bottom: 25px;
+    }
+}
+@media (max-width: $screen-sm-min){
     img#placeholder, .no-logo .default-logo{
         display: none;
     }
@@ -74,4 +92,19 @@ img#placeholder {
     .navbar .retina-world-bank{
         @include size(135px, 26.5px);
     }
+    .interviewer-app{
+        display: block;
+    }
+    .left-column{
+        #log-in{
+            text-align: left;
+            max-width: 300px;
+            margin: 0 auto;
+        }
+    }
+    html body {
+        main .two-columns-form .log-in .form-group .form-control{
+            width: 95%;
+        }
+    }    
 }
